# asas

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  asas.sln  memo.md  pack.bat
.github/workflows/: releaser.yml
apidemo/: apidemo.vcxproj  main.c
dll/: asas.vcxproj.filters  dll.vcxproj  dllmain.c  pch.h
exe/: exe.vcxproj  exe.vcxproj.filters  exemain.c
src/: CMakeLists.txt  dllmain.c  dllmain.def  exemain.c  version.h.in
src/cmake/: version.cmake
